--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "happy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,15 +12,15 @@
     "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "postcss": "^8.4.20",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^3.2.4"
   }
 }
